--- a/pages/index.css
+++ b/pages/index.css
@@ -131,3 +131,78 @@
   width: 480px;
   height: 273px;
 }
+
+.reservation {
+  background: center / cover no-repeat #d9e7ff
+    url("../images/background_reservation.svg");
+  padding: 100px 0 120px;
+}
+
+.reservation__title {
+  margin: 0 0 80px;
+  font-weight: 500;
+  font-size: 44px;
+  line-height: 52px;
+  text-align: center;
+}
+
+.reservation__form {
+  margin: 0 auto;
+}
+
+.form {
+  max-width: 385px;
+}
+
+.form__fieldset {
+  margin: 0;
+  padding: 0;
+  border: none;
+}
+
+.form__label {
+  color: #000;
+  font-weight: 500;
+}
+
+.form__input {
+  display: block;
+  width: 100%;
+  box-sizing: border-box;
+  padding: 15px 20px;
+  margin: 8px 0 32px;
+  border: 1px solid #838383;
+  border-radius: 4px;
+  color: #000;
+  font-size: 20px;
+  line-height: 30px;
+}
+
+.form__button {
+  text-align: center;
+  background-color: #1878dc;
+  color: #fff;
+  border: none;
+  width: 100%;
+  padding: 20px 0;
+  border-radius: 4px;
+  margin-bottom: 32px;
+  transition: background-color 0.8s linear;
+  font-weight: 500;
+}
+
+.form__button:hover {
+  background-color: #3f96f3;
+}
+
+.form__checkbox {
+  border-radius: 2px;
+  width: 20px;
+  height: 20px;
+}
+
+.form__label_type_checkbox {
+  display: flex;
+  justify-content: center;
+  gap: 12px;
+}
