Added BEM File Structure to existing files

--- a/pages/index.css
+++ b/pages/index.css
@@ -1,208 +1,7 @@
-.page {
-  min-width: 1100px;
-  max-width: 1600px;
-  margin: 0 auto;
-  font-family: "Inter", "Arial", Helvetica, sans-serif;
-  font-size: 16px;
-  line-height: 20px;
-}
-
-.header {
-  padding: 30px 80px 40px;
-  position: relative;
-  height: 800px;
-  display: flex;
-  flex-direction: column;
-  background: center / cover no-repeat #fff url(../images/background_header.svg);
-}
-
-.header__image {
-  width: 646px;
-  height: 568px;
-  position: absolute;
-  top: 124px;
-  right: 5px;
-}
-
-.header__title {
-  margin: 183px 0 0;
-  max-width: 729px;
-  font-weight: 500;
-  font-size: 60px;
-  line-height: 72px;
-  letter-spacing: -0.6px;
-}
-
-.header__span-accent {
-  font-family: "Noto Serif", "Times New Roman", serif;
-  font-style: italic;
-  color: #3f96f3;
-  display: block;
-}
-
-.header__description {
-  margin: 28px 0 0;
-  max-width: 683px;
-  font-family: "Noto Serif", "Times New Roman", serif;
-  font-size: 20px;
-  line-height: 30px;
-}
-
-.header__footer {
-  margin-top: auto;
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-end;
-}
-
-.header__paragraph {
-  font-weight: 500;
-  color: #6f6f6f;
-  margin: 0;
-}
-
-.nav {
-  display: flex;
-  justify-content: space-between;
-}
-
-.nav__links {
-  margin: 0;
-  padding: 0;
-  display: flex;
-  list-style-type: none;
-  gap: 20px;
-}
-
-.nav__link {
-  text-decoration: none;
-  font-weight: 500;
-  color: #000;
-}
-
-.nav__logo {
-  width: 105px;
-  height: 39px;
-  position: relative;
-  left: -50px;
-}
-
-.recipes {
-  background: center / cover no-repeat #0a2750
-    url("../images/background_recipes.svg");
-  color: #fff;
-  padding: 100px 80px 215px;
-}
-
-.recipes__title {
-  font-weight: 500;
-  font-size: 44px;
-  line-height: 52px;
-  max-width: 580px;
-  margin: 0 0 24px;
-}
-
-.recipes__subtitle {
-  font-family: "Noto Serif", "Times New Roman", serif;
-  font-size: 20px;
-  line-height: 30px;
-  max-width: 438px;
-  margin: 0 0 80px;
-}
-
-.recipes__video-caption {
-  font-size: 20px;
-  line-height: 30px;
-  justify-content: space-between;
-  display: flex;
-  margin: 24px 0 0;
-  font-weight: 500;
-}
-
-.recipes__videos {
-  display: flex;
-  list-style-type: none;
-  justify-content: center;
-  gap: 40px;
-  margin: 0;
-}
-
-.recipes__iframe {
-  width: 480px;
-  height: 273px;
-}
-
-.reservation {
-  background: center / cover no-repeat #d9e7ff
-    url("../images/background_reservation.svg");
-  padding: 100px 0 120px;
-}
-
-.reservation__title {
-  margin: 0 0 80px;
-  font-weight: 500;
-  font-size: 44px;
-  line-height: 52px;
-  text-align: center;
-}
-
-.reservation__form {
-  margin: 0 auto;
-}
-
-.form {
-  max-width: 385px;
-}
-
-.form__fieldset {
-  margin: 0;
-  padding: 0;
-  border: none;
-}
-
-.form__label {
-  color: #000;
-  font-weight: 500;
-}
-
-.form__input {
-  display: block;
-  width: 100%;
-  box-sizing: border-box;
-  padding: 15px 20px;
-  margin: 8px 0 32px;
-  border: 1px solid #838383;
-  border-radius: 4px;
-  color: #000;
-  font-size: 20px;
-  line-height: 30px;
-}
-
-.form__button {
-  text-align: center;
-  background-color: #1878dc;
-  color: #fff;
-  border: none;
-  width: 100%;
-  padding: 20px 0;
-  border-radius: 4px;
-  margin-bottom: 32px;
-  transition: background-color 0.8s linear;
-  font-weight: 500;
-}
-
-.form__button:hover {
-  background-color: #3f96f3;
-}
-
-.form__checkbox {
-  border-radius: 2px;
-  width: 20px;
-  height: 20px;
-}
-
-.form__label_type_checkbox {
-  display: flex;
-  justify-content: center;
-  gap: 12px;
-}
+@import url("../vendor/normalize.css");
+@import url("../blocks/page.css");
+@import url("../blocks/header.css");
+@import url("../blocks/nav.css");
+@import url("../blocks/recipes.css");
+@import url("../blocks/reservation.css");
+@import url("../blocks/form.css");
