--- a/blocks/about.css
+++ b/blocks/about.css
@@ -1,3 +1,16 @@
+@keyframes pulsate {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 0.6;
+  }
+  100% {
+    transform: scale(1.3);
+    opacity: 0;
+  }
+}
+
 .about {
   background-color: #0a2850;
   color: #fff;
@@ -5,6 +18,9 @@
   padding: 0 80px;
   justify-content: space-between;
   margin: 0;
+  position: relative;
+  overflow: hidden;
+  z-index: 0;
 }
 
 .about__title {
@@ -33,4 +49,15 @@
 
 .about__circle {
   position: absolute;
+  background-color: #1878dc;
+  border-radius: 50%;
+  width: 426px;
+  height: 426px;
+  top: -152px;
+  left: -129px;
+  z-index: -1;
+}
+
+.about__circle_animation_blurred {
+  animation: pulsate 1.3s ease-in-out 0s infinite;
 }
