--- a/blocks/form.css
+++ b/blocks/form.css
@@ -35,8 +35,9 @@
   padding: 20px 0;
   border-radius: 4px;
   margin-bottom: 32px;
-  transition: background-color 0.8s linear;
+  transition: background-color 0.5s;
   font-weight: 500;
+  cursor: pointer;
 }
 
 .form__button:hover {
