adjusted footer heading size, made header image float behind heading text, removed borders around iframe, removed input for values

--- a/blocks/header.css
+++ b/blocks/header.css
@@ -5,6 +5,7 @@
   display: flex;
   flex-direction: column;
   background: center / cover no-repeat #fff url(../images/background_header.svg);
+  z-index: 1;
 }
 
 .header__title {
@@ -37,6 +38,7 @@
   position: absolute;
   top: 124px;
   right: 5px;
+  z-index: -1;
 }
 
 .header__footer {
